fixed margin on mobile nav

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -383,7 +383,7 @@ footer {
                 display: none;
                 position: fixed;
                 right: 0;
-                top: -20px;
+                top: 0;
                 padding-top: 60px;
                 flex-flow: column;
                 justify-content: center;
